--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.7.5",
-        "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "laravel-mix": "^6.0.49",
+        "sass": "^1.65.1",
+        "sass-loader": "^13.3.2",
+        "webpack": "^5.88.2"
+    },
+    "dependencies": {
+        "jquery": "^3.7.0",
+        "lodash": "^4.17.21",
+        "resolve-url-loader": "^5.0.0"
     }
 }
